# begining-root

./: Canvas_1.root  Canvas_1_n4.root  Makefile  README.md  fill_hist.cpp  fill_hist.h  fit_func.cpp  fit_func.h  gauss_2.root  idk.cpp  main.cpp  output.root  output_3.root  output_4.root  read_tree.cpp  read_tree.h  task.txt  task_1.cpp  task_1_original.cpp  task_2.cpp  task_3.cpp  task_5.cpp
NewTask/: Makefile  main.cpp
NewTask/codes/: MyClass.cpp
NewTask/includes/: MyClass.h
sources/: MadeClass.cpp
task_2/: task_2.cpp
task_4/: CMakeLists.txt  Makefile  functions.h  generate_event.cpp  main.cpp  task4.txt
task_4/codes/: generate_event.cpp  read_data.cpp
task_4/includes/: generate_event.h  read_data.h
task_5/: README.txt
task_5/alexander/headers/: MadeClass.h
